force-app/main/default/objects/employee__c/employee__c.object-meta.xml
<CustomObject>
    <description>File makkerの社員マスタより、月1回手動更新</description>
    <label>社員マスタ</label>
    <nameField>
        <label>社員コード</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>