force-app/main/default/objects/employee__c/fields/Attention_leave_start_dateAttention_rich__c.field-meta.xml
<CustomField>
    <fullName>Attention_leave_start_dateAttention_rich__c</fullName>
    <label>⚠️休職開始日について⚠️</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>