force-app/main/default/objects/employee__c/fields/company_mobile__c.field-meta.xml
<CustomField>
    <fullName>company_mobile__c</fullName>
    <label>社用携帯</label>
    <length>255</length>
    <type>Text</type>
</CustomField>