force-app/main/default/objects/employee__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <label>部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>