force-app/main/default/objects/employee__c/fields/department_master__c.field-meta.xml
<CustomField>
    <fullName>department_master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>部署マスタ</label>
    <referenceTo>department_master__c</referenceTo>
    <relationshipLabel>社員マスタ</relationshipLabel>
    <relationshipName>department_master_for_employee</relationshipName>
    <type>Lookup</type>
</CustomField>