force-app/main/default/objects/employee__c/fields/driver__c.field-meta.xml
<CustomField>
    <fullName>driver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ドライバー</label>
    <type>Checkbox</type>
</CustomField>