force-app/main/default/objects/employee__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <label>メールアドレス</label>
    <type>Email</type>
</CustomField>