force-app/main/default/objects/employee__c/fields/employee_name__c.field-meta.xml
<CustomField>
    <fullName>employee_name__c</fullName>
    <label>社員名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>