force-app/main/default/objects/employee__c/fields/expected_hire_date__c.field-meta.xml
<CustomField>
    <fullName>expected_hire_date__c</fullName>
    <label>入社予定日</label>
    <type>Date</type>
</CustomField>