force-app/main/default/objects/employee__c/fields/expected_leave_start_date__c.field-meta.xml
<CustomField>
    <fullName>expected_leave_start_date__c</fullName>
    <label>休職開始予定日</label>
    <type>Date</type>
</CustomField>