force-app/main/default/objects/employee__c/fields/furigana__c.field-meta.xml
<CustomField>
    <fullName>furigana__c</fullName>
    <label>フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>