force-app/main/default/objects/employee__c/fields/headquarters_code__c.field-meta.xml
<CustomField>
    <fullName>headquarters_code__c</fullName>
    <label>本部コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>