force-app/main/default/objects/employee__c/fields/hire_date__c.field-meta.xml
<CustomField>
    <fullName>hire_date__c</fullName>
    <label>入社日</label>
    <type>Date</type>
</CustomField>