force-app/main/default/objects/employee__c/fields/job_category__c.field-meta.xml
<CustomField>
    <fullName>job_category__c</fullName>
    <description>バイヤー
事務員
エンジニア
デザイナー
PM/PL
海外営業
データアナリスト
経理
法務
その他</description>
    <label>職種</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1: 総合職</fullName>
            </value>
            <value>
                <fullName>2: 総合職（日本語）</fullName>
            </value>
            <value>
                <fullName>3: 総合職（英語）</fullName>
            </value>
            <value>
                <fullName>4: 総合職（英語+ロシア語）</fullName>
            </value>
            <value>
                <fullName>5: 総合職（英語+スペイン語）</fullName>
            </value>
            <value>
                <fullName>7: 総合職（英語+中国語）</fullName>
            </value>
            <value>
                <fullName>11: 総合職（ロシア語）</fullName>
            </value>
            <value>
                <fullName>12: 総合職（英語+韓国語）</fullName>
            </value>
            <value>
                <fullName>13: 総合職（中国語）</fullName>
            </value>
            <value>
                <fullName>14: 総合職（スペイン語）</fullName>
            </value>
            <value>
                <fullName>15: 総合職（日本語+英語+タイ語）</fullName>
            </value>
            <value>
                <fullName>100: 営業職</fullName>
            </value>
            <value>
                <fullName>102: 営業職（英語）</fullName>
            </value>
            <value>
                <fullName>107: 営業職（英語+ウルドゥー語）</fullName>
            </value>
            <value>
                <fullName>109: 営業職（英語+タガログ語）</fullName>
            </value>
            <value>
                <fullName>110: 営業サポート</fullName>
            </value>
            <value>
                <fullName>200: PM</fullName>
            </value>
            <value>
                <fullName>201: データエンジニア</fullName>
            </value>
            <value>
                <fullName>202: システムエンジニア</fullName>
            </value>
            <value>
                <fullName>203: FMエンジニア</fullName>
            </value>
            <value>
                <fullName>204: SFエンジニア</fullName>
            </value>
            <value>
                <fullName>206: IT特化</fullName>
            </value>
            <value>
                <fullName>207: デザイナー</fullName>
            </value>
            <value>
                <fullName>208: 国内広告運用</fullName>
            </value>
            <value>
                <fullName>209: 海外広告運用</fullName>
            </value>
            <value>
                <fullName>210: SEO運用（ディレクション）</fullName>
            </value>
            <value>
                <fullName>211: SEO運用（システム）</fullName>
            </value>
            <value>
                <fullName>305: 募集人</fullName>
            </value>
            <value>
                <fullName>306: 社外役員</fullName>
            </value>
            <value>
                <fullName>400: 査定員</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>