force-app/main/default/objects/employee__c/fields/last_working_day__c.field-meta.xml
<CustomField>
    <fullName>last_working_day__c</fullName>
    <label>最終出社日</label>
    <type>Date</type>
</CustomField>