force-app/main/default/objects/employee__c/fields/leave_end_date__c.field-meta.xml
<CustomField>
    <fullName>leave_end_date__c</fullName>
    <label>休職終了日</label>
    <type>Date</type>
</CustomField>