force-app/main/default/objects/employee__c/fields/leave_start_date__c.field-meta.xml
<CustomField>
    <fullName>leave_start_date__c</fullName>
    <label>休職開始日</label>
    <type>Date</type>
</CustomField>