force-app/main/default/objects/employee__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>休業・休職区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1: 産休中</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2: 育休中</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3: 休職中</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4: 介護休業</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>99: その他休職</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>