force-app/main/default/objects/employee__c/fields/parent_department_code__c.field-meta.xml
<CustomField>
    <fullName>parent_department_code__c</fullName>
    <label>上所属コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>