force-app/main/default/objects/employee__c/fields/Role_Category__c.field-meta.xml
<CustomField>
    <fullName>Role_Category__c</fullName>
    <label>ステージ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1: マネージャー</fullName>
            </value>
            <value>
                <fullName>2: メンバー</fullName>
            </value>
            <value>
                <fullName>3: アルバイト</fullName>
            </value>
            <value>
                <fullName>4: 派遣</fullName>
            </value>
            <value>
                <fullName>5: フリーランス</fullName>
            </value>
            <value>
                <fullName>6: 役員</fullName>
            </value>
            <value>
                <fullName>7: 執行役員</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>