force-app/main/default/objects/employee__c/fields/telework__c.field-meta.xml
<CustomField>
    <fullName>telework__c</fullName>
    <defaultValue>false</defaultValue>
    <label>テレワーク</label>
    <type>Checkbox</type>
</CustomField>