force-app/main/default/objects/employee__c/fields/termination_date__c.field-meta.xml
<CustomField>
    <fullName>termination_date__c</fullName>
    <label>退社日</label>
    <type>Date</type>
</CustomField>