force-app/main/default/objects/employee__c/fields/work_location__c.field-meta.xml
<CustomField>
    <fullName>work_location__c</fullName>
    <label>勤務地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>