force-app/main/default/objects/employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>employee_name__c</columns>
    <columns>department_master__c</columns>
    <columns>job_title__c</columns>
    <columns>hire_date__c</columns>
    <columns>termination_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>